# pathly

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN_FSM.md  LICENSE  ORCHESTRATOR_CHANGES.md  PROJECT_ASSESSMENT.md  README.md  SIMPLIFY_REPORT.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.agents/: README.md
.claude/: settings.local.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
adapters/: README.md
agents/: README.md  architect.md  builder.md  director.md  orchestrator.md  planner.md  po.md  quick.md  reviewer.md  scout.md  tester.md  web-researcher.md
claude_agents/: cli.py
core/: README.md
docs/: ARCHITECTURE_AGENTS.md  BUILDER_DELEGATION_PLAN.md  CONCEPTS.md  FAST_MODE_FLOW.md  FEEDBACK_PROTOCOL.md  FLOW_DIAGRAM.md  INSTALLABLE_WORKFLOW_ARCHITECTURE_PROPOSAL.md  INSTALLABLE_WORKFLOW_ARCHITECTURE_RECOMMENDATIONS.md  INSTALLER_DESIGN.md  MULTI_TOOL_DESIGN.md  ORCHESTRATOR_FSM.md  PATHLY_ARCHITECTURE.md  PRODUCTION_READINESS.md  SECURITY_RELIABILITY_REVIEW.md  SYSTEM_REVIEW.md  TROUBLESHOOTING.md
examples/: README.md
hooks/: classify_feedback.py  inject_feedback_ttl.py
orchestrator/: README.md  __init__.py  agent_runner.py  constants.py  eventlog.py  events.py  feedback.py  reducer.py  state.py  test_fsm.py
pathly/: __init__.py  cli-2.py  cli.py  resources.py  team_flow.py
pathly-adapters/: .gitignore  README.md  protocol_contract.yaml  pyproject.toml
pathly-adapters/adapters/claude/: README.md
pathly-adapters/adapters/claude/.claude-plugin/: plugin.json
pathly-adapters/adapters/claude/_meta/: architect.yaml  builder.yaml  director.yaml  end_skill.yaml  go_skill.yaml  help_skill.yaml  install.yaml  orchestrator.yaml  pause_skill.yaml  planner.yaml  po.yaml  quick.yaml  reviewer.yaml  scout.yaml  start_skill.yaml  tester.yaml  web-researcher.yaml
pathly-adapters/adapters/claude/agents/: architect.md  po.md  reviewer.md  scout.md  tester.md  web-researcher.md
pathly-adapters/adapters/codex/: README.md
pathly-adapters/adapters/codex/_meta/: architect.yaml  builder.yaml  director.yaml  end_skill.yaml  go_skill.yaml  help_skill.yaml  install.yaml  orchestrator.yaml  pause_skill.yaml  planner.yaml  po.yaml  quick.yaml  reviewer.yaml  scout.yaml  start_skill.yaml  tester.yaml  web-researcher.yaml
pathly-adapters/adapters/codex/agents/: architect.md  director.md  orchestrator.md  planner.md  quick.md  reviewer.md  scout.md  web-researcher.md
pathly-adapters/adapters/copilot/_meta/: architect.yaml  builder.yaml  director.yaml  end_skill.yaml  go_skill.yaml  help_skill.yaml  install.yaml  orchestrator.yaml  pathly_skill.yaml  pause_skill.yaml  planner.yaml  po.yaml  quick.yaml  reviewer.yaml  scout.yaml  start_skill.yaml  tester.yaml  web-researcher.yaml
pathly-adapters/adapters/copilot/agents/: README.md  builder.md  quick.md  tester.md  web-researcher.md
pathly-adapters/core/: README.md  SKILLS_OVERVIEW.md
pathly-adapters/core/agents/: README.md  README_routing.md  architect.md  builder.md  orchestrator.md  planner.md  po.md  quick.md  scout.md  web-researcher.md
pathly-adapters/core/skills/: archive.md  build.md  debug.md  end.md  meet.md  pathly.md  prd-import.md  review.md  start.md  storm.md  team-flow.md
pathly-adapters/core/skills/team-flow/: build.md  discover.md  plan.md  retro.md  review.md
pathly-adapters/core/templates/plan/: HAPPY_FLOW.template.md  IMPLEMENTATION_PLAN.template.md  PROGRESS.template.md
pathly-adapters/install_cli/: __main__.py  detect.py  materialize.py  mcp_config.py  resources.py  setup_command.py  stitch.py
pathly-adapters/pathly_data/adapters/claude/: README.md
pathly-adapters/pathly_data/adapters/claude/_meta/: architect.yaml  builder.yaml  orchestrator.yaml  planner.yaml  po.yaml  quick.yaml  reviewer.yaml  tester.yaml  web-researcher.yaml
pathly-adapters/pathly_data/adapters/codex/_meta/: architect.yaml  builder.yaml  orchestrator.yaml  planner.yaml  po.yaml  reviewer.yaml  scout.yaml  tester.yaml
pathly-adapters/pathly_data/adapters/copilot/: README.md
pathly-adapters/pathly_data/adapters/copilot/_meta/: architect.yaml  builder.yaml  director.yaml  install.yaml  orchestrator.yaml  po.yaml  web-researcher.yaml
pathly-adapters/pathly_data/core/agents/: README_routing.md  director.md  scout.md  tester.md
pathly-adapters/pathly_data/core/skills/: pathly.md  pause.md  plan.md  po.md  prd-import.md  retro.md  start.md
pathly-adapters/pathly_data/core/skills/team-flow/: test.md
pathly-adapters/pathly_data/core/templates/plan/: ARCHITECTURE_PROPOSAL.template.md  CONVERSATION_PROMPTS.template.md  FLOW_DIAGRAM.template.md  USER_STORIES.template.md
pathly-adapters/pathly_telemetry/: __init__.py  __main__.py  report.py  server.py  storage.py
pathly-adapters/schemas/: pathly-meta.schema.json
pathly-adapters/tests/: conftest.py  test_feedback_protocol.py  test_stitch.py  test_stitch_skill.py
pathly-engine/: README.md  protocol_contract.yaml  pyproject.toml
pathly-engine/docs/: ARCHITECTURE.md  CONCEPTS.md  FEEDBACK_PROTOCOL.md  FLOW_DIAGRAM.md  PATHLY_ARCHITECTURE.md  PRODUCTION_READINESS.md  SECURITY.md  SYSTEM_REVIEW.md
pathly-engine/docs/examples/add-cost-meter/: PROGRESS.md  STORY.md
pathly-engine/engine_cli/: __main__.py  manager.py
pathly-engine/orchestrator/: agent_runner.py  constants.py  eventlog.py  events.py  reducer.py  state.py  utils.py
pathly-engine/runners/: __init__.py  base.py  claude.py  codex.py
pathly-engine/team_flow/: __init__.py  __main__.py  config.py  filesystem.py  manager.py  prompts.py
pathly-engine/tests/: test_agent_runner.py  test_engine_cli.py  test_feedback_protocol.py  test_fsm.py  test_runners.py  test_team_flow_smoke.py  test_ttl.py
plans/: LESSONS_CANDIDATE.md  STORM_SEED.md
scripts/: setup-hook.ps1  setup-hook.sh  team-flow-auto.sh  team_flow.py
tests/: conftest.py  test_cli.py  test_feedback.py  test_feedback_protocol.py  test_fsm.py  test_hooks.py  test_project_packaging.py  test_project_structure.py  test_runners.py  test_setup.py  test_stitch.py  test_team_flow_smoke.py
(+272 files in other folders)
