[project]
name = "pathly"
version = "2.0.0"
description = "Pathly: guided agent workflows for planning, building, reviewing, debugging, testing, and learning from software changes."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
pathly = "pathly.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/hamilton-sky/pathly"
Repository = "https://github.com/hamilton-sky/pathly"
Issues = "https://github.com/hamilton-sky/pathly/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.setuptools.packages.find]
include = ["orchestrator*", "pathly*"]

[tool.setuptools.data-files]
"pathly/core" = ["core/README.md"]
"pathly/core/prompts" = ["core/prompts/*.md"]
"pathly/core/agents" = ["core/agents/*.md"]
"pathly/core/templates" = ["core/templates/README.md"]
"pathly/core/templates/plan" = ["core/templates/plan/*.template.md"]
"pathly/adapters" = ["adapters/README.md"]
"pathly/adapters/cli" = ["adapters/cli/README.md"]
"pathly/adapters/codex" = ["adapters/codex/README.md"]
"pathly/adapters/codex/.codex-plugin" = ["adapters/codex/.codex-plugin/plugin.json"]
"pathly/adapters/codex/skills/archive" = ["adapters/codex/skills/archive/SKILL.md"]
"pathly/adapters/codex/skills/bmad-import" = ["adapters/codex/skills/bmad-import/SKILL.md"]
"pathly/adapters/codex/skills/build" = ["adapters/codex/skills/build/SKILL.md"]
"pathly/adapters/codex/skills/debug" = ["adapters/codex/skills/debug/SKILL.md"]
"pathly/adapters/codex/skills/explore" = ["adapters/codex/skills/explore/SKILL.md"]
"pathly/adapters/codex/skills/go" = ["adapters/codex/skills/go/SKILL.md"]
"pathly/adapters/codex/skills/help" = ["adapters/codex/skills/help/SKILL.md"]
"pathly/adapters/codex/skills/lessons" = ["adapters/codex/skills/lessons/SKILL.md"]
"pathly/adapters/codex/skills/meet" = ["adapters/codex/skills/meet/SKILL.md"]
"pathly/adapters/codex/skills/path" = ["adapters/codex/skills/path/SKILL.md"]
"pathly/adapters/codex/skills/pathly" = ["adapters/codex/skills/pathly/SKILL.md"]
"pathly/adapters/codex/skills/plan" = ["adapters/codex/skills/plan/SKILL.md"]
"pathly/adapters/codex/skills/prd-import" = ["adapters/codex/skills/prd-import/SKILL.md"]
"pathly/adapters/codex/skills/retro" = ["adapters/codex/skills/retro/SKILL.md"]
"pathly/adapters/codex/skills/review" = ["adapters/codex/skills/review/SKILL.md"]
"pathly/adapters/codex/skills/storm" = ["adapters/codex/skills/storm/SKILL.md"]
"pathly/adapters/codex/skills/team-flow" = ["adapters/codex/skills/team-flow/SKILL.md"]
"pathly/adapters/codex/skills/verify-state" = ["adapters/codex/skills/verify-state/SKILL.md"]
"pathly/adapters/claude-code" = ["adapters/claude-code/README.md"]
"pathly/adapters/claude-code/.claude-plugin" = ["adapters/claude-code/.claude-plugin/plugin.json", "adapters/claude-code/.claude-plugin/marketplace.json"]
"pathly/adapters/claude-code/agents" = ["adapters/claude-code/agents/*.md"]
"pathly/adapters/claude-code/skills/archive" = ["adapters/claude-code/skills/archive/SKILL.md"]
"pathly/adapters/claude-code/skills/bmad-import" = ["adapters/claude-code/skills/bmad-import/SKILL.md"]
"pathly/adapters/claude-code/skills/build" = ["adapters/claude-code/skills/build/SKILL.md"]
"pathly/adapters/claude-code/skills/debug" = ["adapters/claude-code/skills/debug/SKILL.md"]
"pathly/adapters/claude-code/skills/explore" = ["adapters/claude-code/skills/explore/SKILL.md"]
"pathly/adapters/claude-code/skills/go" = ["adapters/claude-code/skills/go/SKILL.md"]
"pathly/adapters/claude-code/skills/help" = ["adapters/claude-code/skills/help/SKILL.md"]
"pathly/adapters/claude-code/skills/lessons" = ["adapters/claude-code/skills/lessons/SKILL.md"]
"pathly/adapters/claude-code/skills/meet" = ["adapters/claude-code/skills/meet/SKILL.md"]
"pathly/adapters/claude-code/skills/path" = ["adapters/claude-code/skills/path/SKILL.md"]
"pathly/adapters/claude-code/skills/pathly" = ["adapters/claude-code/skills/pathly/SKILL.md"]
"pathly/adapters/claude-code/skills/plan" = ["adapters/claude-code/skills/plan/SKILL.md"]
"pathly/adapters/claude-code/skills/prd-import" = ["adapters/claude-code/skills/prd-import/SKILL.md"]
"pathly/adapters/claude-code/skills/retro" = ["adapters/claude-code/skills/retro/SKILL.md"]
"pathly/adapters/claude-code/skills/review" = ["adapters/claude-code/skills/review/SKILL.md"]
"pathly/adapters/claude-code/skills/storm" = ["adapters/claude-code/skills/storm/SKILL.md"]
"pathly/adapters/claude-code/skills/team-flow" = ["adapters/claude-code/skills/team-flow/SKILL.md"]
"pathly/adapters/claude-code/skills/verify-state" = ["adapters/claude-code/skills/verify-state/SKILL.md"]
