[project]
name = "pathly"
version = "2.0.0"
description = "Pathly: guided agent workflows for planning, building, reviewing, debugging, testing, and learning from software changes."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
pathly = "pathly.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/hamilton-sky/pathly"
Repository = "https://github.com/hamilton-sky/pathly"
Issues = "https://github.com/hamilton-sky/pathly/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.setuptools.packages.find]
include = ["orchestrator*", "pathly*"]

[tool.setuptools.data-files]
"pathly/core" = ["core/README.md"]
"pathly/core/skills" = ["core/skills/*.md"]
"pathly/core/agents" = ["core/agents/*.md"]
"pathly/core/templates" = ["core/templates/README.md"]
"pathly/core/templates/plan" = ["core/templates/plan/*.template.md"]
"pathly/adapters" = ["adapters/README.md"]
"pathly/adapters/cli" = ["adapters/cli/README.md"]
"pathly/adapters/codex" = ["adapters/codex/README.md"]
"pathly/adapters/codex/.codex-plugin" = ["adapters/codex/.codex-plugin/plugin.json"]
"pathly/adapters/codex/agents" = ["adapters/codex/agents/*.md"]
"pathly/adapters/claude" = ["adapters/claude/README.md"]
"pathly/adapters/claude/.claude-plugin" = ["adapters/claude/.claude-plugin/plugin.json", "adapters/claude/.claude-plugin/marketplace.json"]
"pathly/adapters/claude/agents" = ["adapters/claude/agents/*.md"]
"pathly/adapters/copilot/agents" = ["adapters/copilot/agents/*.md"]
