[project]
name = "pathly-monorepo"
version = "0.1.0"
description = "Pathly monorepo — contains pathly-adapters and pathly-engine."
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/hamilton-sky/pathly"
Repository = "https://github.com/hamilton-sky/pathly"
Issues = "https://github.com/hamilton-sky/pathly/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
